--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "sqlstring": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
